--- a/spec/samples/yamls/sample1.yml
+++ b/spec/samples/yamls/sample1.yml
@@ -5,7 +5,8 @@ security_group_id: sg-aad34bcf
 subnet_id: subnet-cd985794
 image_id: ami-cbf90ecb
 key_name: fukusa_staging
-playbook_path: "fukusa/staging.yml"
+playbook_path: "spec/samples/ansible_playbook/staging.yml"
 inventory_file: "~/.ansible/ec2.py"
 vault_password: fukusa
 instance_type: t2.micro
+user_data_script: "#!/bin/bash -ex\nsu - deploy /home/deploy/startup.sh staging"
