--- a/spec/samples/yamls/normal.yml
+++ b/spec/samples/yamls/normal.yml
@@ -1,10 +1,10 @@
 service: tsudura
 environment: staging
 region: ap-northeast-1
-security_group_id: sg-903ca4f5
+security_group_id: sg-2f1e854a
 subnet_id: subnet-cd985794
 image_id: ami-cbf90ecb
-key_name: fukusa_staging
+key_name: tsudura_sample
 playbook_path: "spec/samples/ansible_playbook/staging.yml"
 inventory_file: "~/.ansible/ec2.py"
 vault_password: <%= ENV["VAULT_PASSWORD"] %>
