--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: ruby
 rvm:
   - 2.2.2
-script: bundle exec rspec
+before_script:
+  - export COVERAGE=true
+script:
+  - bundle exec rspec
