環境変数から指定するのも面倒なのでハードコードした 別に見られて困る情報が書いてあるわけでもないし

--- a/spec/samples/yamls/normal.yml
+++ b/spec/samples/yamls/normal.yml
@@ -8,7 +8,7 @@ key_name: tsudura_sample
 iam_instance_profile: tsudura_role
 playbook_path: "spec/samples/ansible_playbook/staging.yml"
 inventory_file: "~/.ansible/ec2.py"
-vault_password: <%= ENV["VAULT_PASSWORD"] %>
+vault_password: <%= ENV["VAULT_PASSWORD"] || 'tsudura' %>
 instance_type: t2.micro
 user_data_script: "#!/bin/bash -ex\nsu - deploy /home/deploy/startup.sh staging"
 auto_scaling_group_name: tsudura-stg-blue
