ヒアドキュメントの方が見やすい

--- a/spec/samples/yamls/has_not_iam_instance_profile.yml
+++ b/spec/samples/yamls/has_not_iam_instance_profile.yml
@@ -9,6 +9,10 @@ playbook_path: "spec/samples/ansible_playbook/staging.yml"
 inventory_file: "~/.ansible/ec2.py"
 vault_password: <%= ENV["VAULT_PASSWORD"] %>
 instance_type: t2.micro
-user_data_script: "#!/bin/bash -ex\nsu - deploy /home/deploy/startup.sh staging"
+user_data_script: >
+  #cloud-config
+
+  runcmd:
+    - su - deploy /home/deploy/startup.sh staging
 auto_scaling_group_name: tsudura-stg-blue
 owner: <%= ENV["OWNER"] %>
